--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "create-config": "weweb-config"
     },
     "dependencies": {
-        "vue": "^2.6.11"
+        "vue": "^2.6.11",
+        "vuex": "^3.0.1"
     },
     "devDependencies": {
         "weweb-client": "latest"
