--- a/package.json
+++ b/package.json
@@ -1,38 +1,25 @@
 {
-    "name": "ww_container",
-    "type": "wwObject",
-    "wewebPublic": "true",
+    "name": "ww-container",
     "repository": {
         "type": "git",
-        "url": "https://github.com/WeWeb-Public/ww_container"
+        "url": "https://github.com/weweb-assets/ww-container"
     },
-    "version": "0.0.1",
-    "private": true,
+    "version": "1.0.0",
+    "license": "MIT",
     "scripts": {
-        "build": "weweb-build",
-        "serve": "weweb-serve",
-        "create-config": "weweb-config"
+        "build": "weweb build",
+        "serve": "weweb serve"
     },
     "dependencies": {
-        "vue": "^2.6.11",
-        "vuex": "^3.0.1"
+        "vue": "^2.6.12"
     },
     "devDependencies": {
         "@vue/eslint-config-prettier": "^6.0.0",
-        "weweb-client": "latest",
+        "@weweb/cli": "latest",
         "babel-eslint": "^10.1.0",
-        "babel-preset-vue": "^2.0.2",
-        "eslint": "^7.2.0",
-        "eslint-config-standard": "^14.1.1",
-        "eslint-plugin-import": "^2.21.2",
-        "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^3.1.3",
-        "eslint-plugin-standard": "^4.0.1",
-        "eslint-plugin-vue": "^6.2.2"
-    },
-    "browserslist": [
-        "> 1%",
-        "last 2 versions",
-        "not ie <= 8"
-    ]
+        "eslint": "^7.11.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-vue": "^7.0.1",
+        "prettier": "^2.1.2"
+    }
 }
