--- a/ww-config.json
+++ b/ww-config.json
@@ -4,6 +4,7 @@
         "label": { "en": "Container", "fr": "Container" },
         "editElementMenu": {
             "items": [{ "label": { "en": "Options", "fr": "Options" }, "action": "edit" }]
-        }
+        },
+        "noHover": true
     }
 }
