Add sizing in quick access

--- a/ww-config.json
+++ b/ww-config.json
@@ -5,6 +5,11 @@
         "menuOptions": {
             "items": [
                 {
+                    "name": "Sizing",
+                    "quick": [{ "type": "Sizing" }],
+                    "icon": "sizing"
+                },
+                {
                     "name": "Background",
                     "quick": [{ "type": "Background" }],
                     "icon": "background"
