--- a/ww-config.json
+++ b/ww-config.json
@@ -15,6 +15,15 @@
                     "icon": "background"
                 }
             ]
+        },
+        "otherOptions": {
+            "data": {
+                "bindable": "repeatable",
+                "label": {
+                    "en": "Content data",
+                    "fr": "Données"
+                }
+            }
         }
     }
 }
