Repeatable ok but not grid

--- a/ww-config.json
+++ b/ww-config.json
@@ -17,7 +17,7 @@
             ]
         },
         "otherOptions": {
-            "data": {
+            "wwObjects": {
                 "bindable": "repeatable",
                 "label": {
                     "en": "Content data",
