--- a/ww-config.json
+++ b/ww-config.json
@@ -1,5 +1,8 @@
 {
     "componentPath": "./src/wwElement.vue",
+    "options": {
+        "lazyHydrate": true
+    },
     "editor": {
         "label": { "en": "Container", "fr": "Container" },
         "menuOptions": {
